Finalização dos metodos DAO, procedures e telas de cadastro e listar

--- a/Veiculos.Site/Veiculos.Site/Veiculos.Site.csproj
+++ b/Veiculos.Site/Veiculos.Site/Veiculos.Site.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Veiculos.Models">
+      <HintPath>..\..\Veiculos.WebAPI\Veiculos.Models\bin\Debug\Veiculos.Models.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
